# SmallAutoSave

./: CMakeLists.txt  main.cpp
